# IOC_StarMap

./: .gitignore  BUILD.md  CMakeLists.txt  DATABASE_SETUP.md  DEPENDENCIES.md  GAIA_SAO_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  MEMORY_OPTIMIZATION_CHANGELOG.md  Makefile.tmp590b2  QUICKSTART.md  README.md  STRUCTURE.md  StarMapConfig.cmake  cmake_install 2.cmake  cmake_install.cmake  download_deps.sh  test_memory_optimization.py
cmake/: StarMapConfig.cmake.in
docs/: API_UPDATES.md  GAIA_SAO_DATABASE.md  JSON_CONFIGURATION.md  LEO_TEST_RESULTS.md  LIBRARY_CONFIGURATION.md  MEMORY_OPTIMIZATION.md  OCCULTATION_API.md  OCCULTATION_IMPLEMENTATION.md  OCCULTATION_QUICKSTART.md  OVERLAY_GUIDE.md
docs/json_config/: 01_base.md  02_performance.md  03_grid.md  04_stars.md  05_ui.md  06_overlays_base.md  07_overlays_advanced.md  08_examples.md  09_utilities.md
docs/json_manual/: 00_INDEX.md  01_BASE_CONFIG.md  02_PERFORMANCE.md  03_RENDERING.md  04_UI_ELEMENTS.md  05_OVERLAYS.md
examples/: CMakeLists.txt  LEO_EXAMPLE.md  basic_usage.cpp  gaia_approach_map.cpp  gaia_query.cpp  generate_chart.cpp  json_config.cpp  leo_chart.cpp  leo_constellation.cpp  leo_online.cpp  leo_quick.cpp  leo_simple.cpp  occultation_chart.cpp  programmatic_config.cpp  test_catalog.cpp  test_gaia.cpp  test_mag18_direct.cpp  test_magnitudes.cpp  test_sao_database.cpp
examples/config_examples/: IAU_FINDER_README.md  OCCULTATION_DETAIL_MAPS.md  andromeda.json  custom.json  deep_field.json  fully_configured.json  iau_style_finder.json  leo.json  leo_simple.json  m31_detail.json  m31_finder.json  occultation_approach_iau.json  occultation_detail_betelgeuse_style.json  occultation_with_path.json  orion.json  orion_full.json  orion_wide_optimized.json  orion_with_overlays.json  preset_detail.json  preset_finder.json  telescope_detail.json  telescope_finder.json  ursa_major.json
examples/occultation_examples/: README.md  example_eros.json  occultation_helper.py
include/starmap/: StarMap.h
include/starmap/catalog/: CatalogManager.h  GaiaClient.h  GaiaSAODatabase.h  SAOCatalog.h
include/starmap/config/: ConfigurationLoader.h  JSONConfigLoader.h  LibraryConfig.h
include/starmap/core/: CelestialObject.h  Coordinates.h
include/starmap/map/: ChartGenerator.h  ConstellationData.h  GridRenderer.h  MapConfiguration.h  MapRenderer.h  Projection.h
include/starmap/occultation/: OccultationChartBuilder.h  OccultationData.h
include/starmap/utils/: HttpClient.h
scripts/: README.md  build_gaia_sao_database.py
src/: StarMap.cpp
src/catalog/: CatalogManager.cpp  GaiaClient.cpp  GaiaSAODatabase.cpp  SAOCatalog.cpp
src/config/: ConfigurationLoader.cpp  JSONConfigLoader.cpp  LibraryConfig.cpp
src/core/: CelestialObject.cpp  Coordinates.cpp
src/map/: ChartGenerator.cpp  ConstellationData.cpp  GridRenderer.cpp  MapConfiguration.cpp  MapRenderer.cpp  Projection.cpp
src/occultation/: OccultationChartBuilder.cpp  OccultationData.cpp
src/utils/: HttpClient.cpp
